--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html>
 <head>
-    <title>Lebensmittelretter</title>
+    <title>lebensmittelretter</title>
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
